# spIRCe

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Connection.hpp  README.md  Server.hpp  User.hpp  irc.hpp  numerics.hpp  socket.hpp  utils.hpp
lib/: CMakeLists.txt  README.md
src/: Connection.cpp  Server.cpp  User.cpp  irc.cpp  main.cpp  socket.cpp  utils.cpp
test/: CMakeLists.txt  SocketTest.cpp
